--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,218 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: wnd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd2.shabijichang.com
-  - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: nl01.lovehjq.xyz
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 120.241.46.222
-    port: 62004
-    cipher: auto
-    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: data.db-link02.top
-  - &id004
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 120.241.46.223
-    port: 62014
-    cipher: auto
-    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: data.db-link02.top
-  - &id006
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 156.225.67.234
-    port: 30000
-    cipher: auto
-    uuid: 93503dd5-245a-4eb1-ae2a-57ab9f2b3c29
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1698239888914
-      headers:
-        host: www.47734647.xyz
-  - &id007
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: 104.17.18.26
-    port: 80
-    cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.109420.xyz
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 120.241.46.222
-    port: 63091
-    cipher: auto
-    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: data.db-link01.top
-  - &id009
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
-    type: vmess
-    server: 104.26.8.44
-    port: 80
-    cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.109420.xyz
-  - &id010
-    name: 🇵🇰_PK_巴基斯坦
-    type: trojan
-    server: 
-      us1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: a3f221f8-43d6-4363-8624-ce62d3db0202
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 156.225.67.104
-    port: 30000
-    cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1698239888914
-      headers:
-        host: www.41758112.xyz
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: vmess
-    server: 120.241.46.222
-    port: 61082
-    cipher: auto
-    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: data.db-link02.top
-  - &id013
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 206.168.190.219
-    port: 2082
-    cipher: auto
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id014
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 108.181.10.17
-    port: 80
-    cipher: auto
-    uuid: 474e8680-701f-11ee-b436-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id015
-    name: 🇺🇸_US_美国->🇵🇱_PL_波兰
-    type: vmess
-    server: b62a948c-faa2-4e8a-bf8a-3ff3121c875a.asoul-diana.xyz
-    port: 443
-    cipher: auto
-    uuid: 5f726fe3-d82e-4da5-a711-8af0cbb2b682
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /acetaffy.top
-      headers:
-        host: b62a948c-faa2-4e8a-bf8a-3ff3121c875a.asoul-diana.xyz
-  - &id016
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.21.75.246
+    server: sbl2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -231,21 +20,80 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国_5
+  - &id002
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 195.123.240.170
-    port: 41916
+    server: 45.58.152.70
+    port: 30000
     cipher: auto
-    uuid: 12772df9-485f-413c-edbf-3f562d61de4e
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1699193100388
+      headers:
+        host: www.54964745.xyz
+  - &id003
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
+    type: vmess
+    server: 8.222.198.105
+    port: 80
+    cipher: auto
+    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
     alterId: 0
     tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: warp.chigua.tk
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10845
+    udp: true
+    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇺🇸_US_美国_6
+  - &id005
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 35.181.201.102
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10837
+    udp: true
+    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
-    server: flkf2.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -256,67 +104,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: flkf2.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 206.168.190.219
-    port: 8080
-    cipher: auto
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-    type: vmess
-    server: 120.241.46.222
-    port: 62001
-    cipher: auto
-    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /dabai.in
-      headers:
-        host: data.db-link01.top
-  - &id021
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id022
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 124.220.57.75
-    port: 80
-    cipher: auto
-    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: 124.220.57.75
-  - &id023
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+        host: mm2.shabijichang.com
+  - &id009
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: mm3.shabijichang.com
     port: 80
@@ -330,31 +120,16 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id024
-    name: 🇩🇪_DE_德国
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: trojan
-    server: 18.153.153.147
-    port: 22222
+    server: other.kunlun-ppg.com
+    port: 10850
     udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
+    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id025
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: sbl4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -391,21 +166,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -421,21 +181,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -449,21 +194,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
-      - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
