--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -7,6 +7,16 @@ external-controller: 0.0.0.0:9090
 proxies:
   - &id001
     name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 64.176.162.24
+    port: 443
+    udp: true
+    password: wkmY1R4EcP
+    sni: z-v1-zzzh.ashx.net
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -20,13 +30,13 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id002
-    name: 🇺🇸_US_美国_2
+  - &id003
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
-    server: 45.58.152.70
+    server: 45.199.138.146
     port: 30000
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
     alterId: 64
     tls: true
     skip-cert-verify: true
@@ -34,79 +44,9 @@ proxies:
     ws-opts:
       path: /path/1699193100388
       headers:
-        host: www.54964745.xyz
-  - &id003
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
-    type: vmess
-    server: 8.222.198.105
-    port: 80
-    cipher: auto
-    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: warp.chigua.tk
+        host: www.19229362.xyz
   - &id004
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 35.181.201.102
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10837
-    udp: true
-    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
-    udp: true
-    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id008
     name: 🇺🇸_US_美国->🇮🇳_IN_印度
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国_3
     type: vmess
     server: mm3.shabijichang.com
     port: 80
@@ -120,16 +60,47 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
-    udp: true
-    password: cb9c8687-b85d-4f43-88a3-4829e3ec27eb
-    sni: alibaba-node.cn
+  - &id005
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 156.225.67.155
+    port: 30000
+    cipher: auto
+    uuid: 375e70f0-5d46-476f-8d69-0fb35c5548a9
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1699534876280
+      headers:
+        host: www.11302851.xyz
+  - &id006
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 112.29.94.23
+    port: 49056
+    cipher: auto
+    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: 3d761afc-6dfd-49d9-9d0f-b79341391f26
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -163,9 +134,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -178,9 +146,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
   - name: SELECT
     type: select
     proxies:
@@ -191,9 +156,6 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
-      - *id008
-      - *id009
-      - *id010
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
