--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,70 +6,75 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 112.29.94.23
-    port: 49056
-    cipher: auto
-    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 156.225.67.155
-    port: 30000
+    server: 104.18.62.248
+    port: 2052
     cipher: auto
-    uuid: 375e70f0-5d46-476f-8d69-0fb35c5548a9
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1699534876280
-      headers:
-        host: www.11302851.xyz
-  - &id003
-    name: 🇨🇿_CZ_捷克
-    type: vmess
-    server: 195.123.246.120
-    port: 10000
-    cipher: auto
-    uuid: 0adfd7a6-8054-11ee-9116-52cf00e461ad
+    uuid: 664af8e6-2755-40ed-bb4e-2eeecf9b0a60
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vpnjantit
+      path: /public?ed=2048
+      headers:
+        host: de1.biqibao.site
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 20.kccic2pa.xyz
+    port: 50020
+    cipher: auto
+    uuid: a24d165e-408c-41cb-9997-0fcb012cb138
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 09.kccic2pa.xyz
+    port: 50009
+    cipher: auto
+    uuid: a24d165e-408c-41cb-9997-0fcb012cb138
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
   - &id004
-    name: 🇬🇧_GB_英国
+    name: 🇫🇷_FR_法国_1
     type: ss
-    server: 198.244.231.25
+    server: 51.159.221.231
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id005
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.158.37.62
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id006
     name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
-    server: 45.199.138.146
+    server: 45.199.138.191
     port: 30000
     cipher: auto
-    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1699193100388
+      path: /path/1699280099138
       headers:
-        host: www.19229362.xyz
-  - &id006
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+        host: www.42077230.xyz
+  - &id007
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
-    server: ld2.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -80,9 +85,69 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ld2.shabijichang.com
-  - &id007
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+        host: mm2.shabijichang.com
+  - &id008
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+    type: vmess
+    server: 8.222.198.105
+    port: 80
+    cipher: auto
+    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: warp.chigua.tk
+  - &id009
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: mrb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mrb2.shabijichang.com
+  - &id010
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: sbl4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl4.shabijichang.com
+  - &id011
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
+    type: vmess
+    server: 8.222.235.92
+    port: 80
+    cipher: auto
+    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: warp.chigua.tk
+  - &id012
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: mm3.shabijichang.com
     port: 80
@@ -96,18 +161,8 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id008
+  - &id013
     name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 64.176.162.24
-    port: 443
-    udp: true
-    password: wkmY1R4EcP
-    sni: z-v1-zzzh.ashx.net
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇺🇸_US_美国_3
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -121,8 +176,82 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id010
+  - &id014
+    name: 🇱🇹_LT_立陶宛
+    type: trojan
+    server: 212.24.103.3
+    port: 2053
+    udp: true
+    password: 2228e29d-942a-4ee8-b3c0-f4a846e3f355
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 162.19.59.165
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 162.19.59.162
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 51.158.54.209
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 85.239.52.174
+    port: 51348
+    password: datdGFe4LkMN710aHedy
+    cipher: chacha20-ietf-poly1305
+  - &id019
     name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 198.41.223.14
+    port: 80
+    cipher: auto
+    uuid: 3d761afc-6dfd-49d9-9d0f-b79341391f26
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v006.ssrsub.com
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: bjcu.xzyunjiasu.icu
+    port: 33952
+    password: 5c8b210a-2f00-4292-964b-05281c7ad5d1
+    cipher: aes-256-gcm
+  - &id021
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id022
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -136,6 +265,36 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v005.ssrsub.com
+  - &id023
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.16.68.38
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 1
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+      headers:
+        host: alvvin.click
+  - &id024
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
 proxy-groups:
   - name: PROXY
     type: select
@@ -172,6 +331,20 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -187,6 +360,20 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
   - name: SELECT
     type: select
     proxies:
@@ -200,6 +387,20 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
