--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
     type: vmess
-    server: 8.222.198.105
+    server: sbl4.shabijichang.com
     port: 80
     cipher: auto
-    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,7 +19,7 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: warp.chigua.tk
+        host: sbl4.shabijichang.com
   - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
@@ -36,153 +36,7 @@ proxies:
       headers:
         host: ssrsub.v006.ssrsub.com
   - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.18.62.248
-    port: 2052
-    cipher: auto
-    uuid: 664af8e6-2755-40ed-bb4e-2eeecf9b0a60
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public?ed=2048
-      headers:
-        host: de1.biqibao.site
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id005
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id006
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: 3d761afc-6dfd-49d9-9d0f-b79341391f26
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id007
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id008
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id009
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 09.kccic2pa.xyz
-    port: 50009
-    cipher: auto
-    uuid: a24d165e-408c-41cb-9997-0fcb012cb138
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.16.68.38
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 1
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-      headers:
-        host: alvvin.click
-  - &id011
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: sbl4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
-  - &id012
-    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国_2
-    type: vmess
-    server: 8.222.235.92
-    port: 80
-    cipher: auto
-    uuid: ffffffff-ffff-ffff-ffff-ffffffffffff
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: warp.chigua.tk
-  - &id013
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: mm3.shabijichang.com
     port: 80
@@ -196,7 +50,67 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id014
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10845
+    udp: true
+    password: b7de227d-9f33-4edf-822d-9006a3b74787
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10848
+    udp: true
+    password: b7de227d-9f33-4edf-822d-9006a3b74787
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 95.164.61.27
+    port: 80
+    cipher: auto
+    uuid: 73f51947-ce77-4d19-a652-467863492634
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: il1.xv2ray.net
+  - &id007
+    name: 🇨🇳_CN_中国_1
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: b7de227d-9f33-4edf-822d-9006a3b74787
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm2.shabijichang.com
+  - &id009
     name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
     server: 45.199.138.191
@@ -211,16 +125,42 @@ proxies:
       path: /path/1699280099138
       headers:
         host: www.42077230.xyz
-  - &id015
-    name: 🇱🇹_LT_立陶宛
+  - &id010
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
     type: trojan
-    server: 212.24.103.3
-    port: 2053
+    server: other.kunlun-ppg.com
+    port: 10850
     udp: true
-    password: 2228e29d-942a-4ee8-b3c0-f4a846e3f355
+    password: b7de227d-9f33-4edf-822d-9006a3b74787
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id016
+  - &id012
+    name: 🇨🇳_CN_中国_2
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10837
+    udp: true
+    password: b7de227d-9f33-4edf-822d-9006a3b74787
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id013
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: mrb2.shabijichang.com
@@ -235,17 +175,6 @@ proxies:
       path: /
       headers:
         host: mrb2.shabijichang.com
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 20.kccic2pa.xyz
-    port: 50020
-    cipher: auto
-    uuid: a24d165e-408c-41cb-9997-0fcb012cb138
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -285,10 +214,6 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -307,10 +232,6 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
   - name: SELECT
     type: select
     proxies:
@@ -327,10 +248,6 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
-      - *id014
-      - *id015
-      - *id016
-      - *id017
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
